# smok-finance

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs  routes.rs
crates/api/src/routes/: accounts.rs  budgets.rs  payees.rs  sources.rs  transactions.rs
crates/core/: Cargo.toml
crates/core/src/: accounts.rs  db.rs  error.rs  lib.rs  models.rs  payees.rs  sources.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  main.rs
migrations/: 0001_initial.sql
